add module and modify process class

--- a/MicroClassic/MicroClassic.vcxproj
+++ b/MicroClassic/MicroClassic.vcxproj
@@ -154,6 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Define.h" />
+    <ClInclude Include="Module.h" />
     <ClInclude Include="Process.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
