--- a/MicroClassic/MicroClassic.vcxproj.filters
+++ b/MicroClassic/MicroClassic.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="Process.h">
       <Filter>Process</Filter>
     </ClInclude>
+    <ClInclude Include="Module.h">
+      <Filter>Process</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
