--- a/MicroClassic/MicroClassic.vcxproj
+++ b/MicroClassic/MicroClassic.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClCompile Include="DeviceResources.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MSAA.cpp" />
     <ClCompile Include="Overlay.cpp" />
     <ClCompile Include="Process.cpp" />
   </ItemGroup>
@@ -157,6 +158,7 @@
     <ClInclude Include="DeviceResources.h" />
     <ClInclude Include="Helpers.h" />
     <ClInclude Include="Module.h" />
+    <ClInclude Include="MSAA.h" />
     <ClInclude Include="Overlay.h" />
     <ClInclude Include="Process.h" />
   </ItemGroup>
