add draw_xxx methods

--- a/MicroClassic/MicroClassic.vcxproj
+++ b/MicroClassic/MicroClassic.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="MSAA.h" />
     <ClInclude Include="Overlay.h" />
     <ClInclude Include="Process.h" />
+    <ClInclude Include="StepTimer.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
